--- a/bs-config.json
+++ b/bs-config.json
@@ -1,4 +1,7 @@
 {
-    "server": ["src", "node_modules/bootstrap/dist"],
-    "port": 3000
+    "server": [
+        "src",
+        "node_modules/bootstrap/dist/css",
+        "node_modules/bootstrap/dist/js"
+    ]
 }
